--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "portfolio",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon start.js"
+    "build": "webpack",
+    "watch": "nodemon ./start.js --ignore public/",
+    "start": "concurrently \"npm run watch\" \"npm run assets\" --names \"💻,📦\" --prefix name",
+    "assets": "webpack -w"
+
   },
   "author": "codie",
   "license": "ISC",
@@ -19,6 +23,10 @@
     "slugs": "0.1.3"
   },
   "devDependencies": {
+    "@babel/core": "7.16.0",
+    "@babel/preset-env": "7.16.0",
+    "autoprefixer": "10.4.0",
+    "babel-loader": "8.2.3",
     "concurrently": "6.3.0",
     "css-loader": "6.5.1",
     "mini-css-extract-plugin": "2.4.3",
@@ -27,6 +35,7 @@
     "postcss": "8.3.11",
     "postcss-loader": "6.2.0",
     "sass-loader": "12.3.0",
+    "resolve-url-loader": "4.0.0",
     "webpack": "5.61.0",
     "webpack-cli": "4.9.1"
   },
