--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "1.0.0",
   "description": "portfolio",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "build": "webpack",
     "watch": "nodemon ./start.js --ignore public/",
@@ -40,6 +40,6 @@
     "webpack-cli": "4.9.1"
   },
   "engines": {
-    "node": "14.x"
+    "node": "16.14.0"
   }
 }
